[tool.poetry]
name = "codefighter-server"
version = "0.1.0"
description = ""
authors = ["Davee Sok <daveesok@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-socketio = "^5.4.0"
gunicorn = "^20.1.0"
gevent = "^21.8.0"
gevent-websocket = "^0.10.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
