[tool.poetry]
name = "codefighter-server"
version = "0.1.0"
description = ""
authors = ["Davee Sok <daveesok@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-socketio = "^5.4.0"
gunicorn = "^20.1.0"
eventlet = "^0.31.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
